examples/test/testpolicy120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy120
  namespace: namespace260
spec:
  podSelector:
    matchLabels:
      key15: value26
      key35: value15
      key30: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value4
          key10: value1
          key4: value18
      podSelector:
        matchLabels:
          key29: value9
